show new short url after creating it

--- a/app/views/shortenurls/new.html.erb
+++ b/app/views/shortenurls/new.html.erb
@@ -12,4 +12,5 @@
     <label for="originalUrl">Original Url:</label>
     <input data-target="urlform.originalUrl" type="text" id="originalUrl">
     <input data-action="click->urlform#checkAndSubmit" type="button" value="Create">
+    <p data-target="urlform.shortUrl"></p>
 </form>
