clear output after each submit

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,6 +1,9 @@
 p {
     margin: 0;
 }
+.hidden {
+    display: none;
+}
 .form-container {
     background-color: aliceblue;
     max-width: 700px;
