--- a/app/views/shortenurls/new.html.erb
+++ b/app/views/shortenurls/new.html.erb
@@ -1,5 +1,5 @@
 <div class="form-container" data-controller="urlform">
-    <p class="error" data-target="urlform.error"></p>
+    <p class="hidden " data-target="urlform.error"></p>
     <div class="form">
         <label for="originalUrl">Original Url:</label>
         <input data-target="urlform.originalUrl" type="text" id="originalUrl">
@@ -8,5 +8,5 @@
         </button>
 
     </div>
-    <p class="mylink" data-target="urlform.shortUrl"></p>
+    <p class="hidden" data-target="urlform.shortUrl"></p>
 </div>
