style home page

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -2,6 +2,9 @@ body {
     padding: 0;
     margin: 0;
 }
+p {
+    margin: 0;
+}
 nav {
 
     background-color: #caf0f8;
@@ -22,9 +25,29 @@ nav {
     
 }
 
+.mygrid {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
+.table-container {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+.table-title {
+    background-color: #caf0f8;
+    p {
+        font-size: 24px;
+        font-weight: bold;
+        padding: 5px;
+    }
+}
+.urls_table {
 
-p {
-    margin: 0;
+    background-color: whitesmoke;
+    p {
+        padding: 5px;
+        border-bottom: 1px solid black ;
+    }
 }
 .hidden {
     display: none;
