add not found page error

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -24,7 +24,11 @@ nav {
     }
     
 }
-
+.notfound {
+    font-size: 48px;
+    text-align: center;
+    color: red;
+}
 .mygrid {
     display: grid;
     grid-template-columns: 2fr 1fr;
