test shortenurl create method

--- a/app/views/shortenurls/new.html.erb
+++ b/app/views/shortenurls/new.html.erb
@@ -2,7 +2,7 @@
     <p class="hidden " data-target="urlform.error"></p>
     <div class="form">
         <label for="originalUrl">Original Url:</label>
-        <input data-target="urlform.originalUrl" type="text" id="originalUrl">
+        <input data-target="urlform.originalUrl" id="sortenurl_originalUrl" type="text" id="originalUrl">
         <button data-action="click->urlform#checkAndSubmit">
             Create
         </button>
