add number of visits to each short url

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -31,7 +31,7 @@ nav {
 }
 .mygrid {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 4fr 2fr 1fr;
 }
 .table-container {
     max-width: 1000px;
